[package]
name = "ferrite"
version = "0.1.0"
edition = "2021"

[dependencies]
#anyhow = "1.0.95"
crossbeam = { version = "0.8.4", features = ["nightly"] }
#serde = { version = "1.0.217", features = ["derive"] }
#thiserror = "2.0.9"

[profile.release-bin]
inherits = "release"
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = true

[profile.release]
panic = "abort"
